# chess

./: .gitignore  Board.h  CMakeLists.txt  Piece.cpp  Piece.h  board.cpp  board.h  constants.h  constants.hpp  game.cpp  game.h  graphics.cpp  graphics.h  main.cpp  move.cpp  move.h  move.hpp  piece.cpp  piece.h  promotion.cpp  promotion.h  random.cpp  random.h
include/: board.h  constants.h  game.h  move.h  piece.h  random.h
source/: board.cpp  graphics.cpp  main.cpp  move.cpp
testing/: testBoid.cpp  testSample.cpp
